# mambru

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.atl/: skill-registry.md
openspec/: config.yaml
openspec/changes/fix-rust-backend/: design.md
openspec/changes/hologram-avatar/: proposal.md
openspec/changes/mambru-app/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/project-cleanup/: design.md  proposal.md  tasks.md
openspec/specs/chat-interface/: spec.md
openspec/specs/comandos-panel/: spec.md
openspec/specs/command-execution/: spec.md
scripts/: cargo-mambru.bat  cargo-mambru.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/patches/: README.md
src-tauri/patches/whisper-rs-sys/: build.rs
src-tauri/patches/whisper-rs-sys/whisper.cpp/ggml/src/ggml-cpu/cmake/: FindSIMD.cmake
src-tauri/patches/whisper-rs/src/: common_logging.rs  whisper_grammar.rs
src-tauri/src/: integration_tests.rs  main.rs
src-tauri/src/commands/: chat.rs  mod.rs  settings.rs  tools.rs  voice.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/conversation/: history.rs  mod.rs  personality.rs
src-tauri/src/llm/: mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/security/: audit.rs  classifier.rs  mod.rs
src-tauri/src/tools/: executor.rs  mod.rs  search.rs
src-tauri/src/tools/commands/: builder.rs  matcher.rs  mod.rs  registry.rs
src-tauri/src/voice/: download.rs  mod.rs  stt.rs  tts.rs  vad.rs
src/lib/api/: llm.ts  (+3 more)
(+74 files in other folders)
